[tool.poetry]
name = "auto-slicer"
version = "0.1.0"
description = ""
authors = ["Lim0H <bikofusyba55@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.9"


[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
