[tool.poetry]
name = "auto-slicer"
version = "0.1.0"
description = ""
authors = ["Lim0H <bikofusyba55@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.9"
bpy = "^4.1.0"
numpy = "^1.26.4"
numpy-stl = "^3.1.1"
decorator = "^5.1.1"
xtyping = "^0.8.2"


[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
